Revision history for Perl extension Devel-Mockify

{{$NEXT}}

2.2 2018-03-26T21:49:15Z
    - fix issue #34 Prototype mismatch warning when running tests

2.1 2018-03-21T21:24:26Z
    - fix typo in docu
    - fix lexical scope Issue with mockimported and mockStatic

2 2018-03-19T13:26:56Z
    - fix problems with static mocks
    - clean up project
    - remove deprecated methods
    - use everywhere Error in order to get the Error stack
    - allow mock of static methods
    - fix critic (brutal)
    - add Example section
    - fix (and add) some typos
    - fix another number bug
    - improve error output
    - fix Issue #31 remove deprecated methods
    - fix Issue #10 sample project 

1.3 2018-01-29T16:37:11Z
    - add static mock option thx to @dbucky for this idea

1.2 2018-01-11T10:14:54Z
    - fixing issue with 0 and '0' and "0" and undef

1.1 2018-01-11T08:47:55Z
    - allow optional new (thx dbucky)

1.0 2017-12-18T16:46:39Z
    - refactor cpanfile
    - go for one-dot versioning 1.0

0.10.3 2017-12-18T08:51:45Z
    - merge PR from manwar

0.10.2 2017-12-15T13:18:46Z
    - fix Isse object matcher dont match [#20]

0.10.1 2017-03-14T12:34:29Z
    - add method spy [#17]
    - fix issue typo in docu [#18]

0.10.0 2017-02-22T19:44:56Z
    - fix documentation and versionsnumber issues

0.9.4 2017-02-15T19:43:47Z
    - new chained mocksetup approach

0.9.3 2017-01-14T13:35:54Z
    - revison number
    - add meatcpan badge
    - fix kwalitee warnings

0.9 2017-01-06T14:07:50Z
    - initial version
    - initial release on CPAN
